--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
 language: node_js
+dist: xenial
 node_js:
   - "10"
+before_script:
+  - wget https://downloads.wkhtmltopdf.org/0.12/0.12.5/wkhtmltox_0.12.5-1.xenial_amd64.deb
+  - sudo dpkg -i wkhtmltox_0.12.5-1.xenial_amd64.deb
 script:
   - yarn run publish
 deploy:
