--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,7 @@ dist: xenial
 node_js:
   - "10"
 before_script:
-  - wget https://downloads.wkhtmltopdf.org/0.12/0.12.5/wkhtmltox_0.12.5-1.xenial_amd64.deb
-  - sudo dpkg -i wkhtmltox_0.12.5-1.xenial_amd64.deb
+  - sudo apt-get install -y wkhtmltopdf
 script:
   - yarn run publish
 deploy:
@@ -17,3 +16,6 @@ deploy:
   target-branch: gh-pages
   on:
     branch: master
+addons:
+  apt:
+    update: true
