--- a/package.json
+++ b/package.json
@@ -5,12 +5,19 @@
   "main": "index.js",
   "dependencies": {
     "jsonresume-theme-elegant": "^1.13.1",
+    "npm-run-all": "^4.1.5",
     "resume-cli": "^1.2.7",
     "yamljs": "^0.3.0"
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "convert": "yaml2json resume.yml > resume.json",
+    "pretest": "run-s convert",
+    "test": "resume test",
+    "clean": "rm -rf resume.json dist",
+    "package": "mkdir -p dist  && cp profile.jpg resume.json dist",
+    "prebuild": "run-s clean convert package",
+    "build": "resume export dist/index.html --theme elegant"
   },
   "repository": {
     "type": "git",
