--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,13 +13,13 @@ jobs:
       - name: install dependencies
         env:
           PUPPETEER_SKIP_CHROMIUM_DOWNLOAD: true
-        run: npm ci
+        run: npm ci && npm install -g npx
       - name: build
-        run: npm run build
+        run: make -j
       - name: deploy
         uses: crazy-max/ghaction-github-pages@v1.0.1
         with:
           target_branch: gh-pages
           build_dir: dist
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_BOT_TOKEN }}
