--- a/resume.en.yml
+++ b/resume.en.yml
@@ -18,10 +18,22 @@ basics:
       username: bastienarata
 
 work:
+  - company: Loft Orbital
+    position: Site Reliability Engineer
+    website: https://loftorbital.com
+    startDate: "2020-05-04"
+    summary: >
+      At Loft Orbital I'm taking care of the production stack.
+      It includes cloud management, deployment, automatization, CI/CD and tooling.
+    highlight:
+      - Kubernetes cloud (GCP, AWS) cluster deployment
+      - Workflow refactoring, dev tools.
+      - CI/CD performances and reliability
   - company: D2SI
     position: Cloud & DevOps consultant
     website: https://d2si.io
     startDate: "2019-02-01"
+    endDate: "2020-05-01"
     summary: >
       At D2SI I'm being sent helping clients to create, automatize and strengthen their deployment procedures.
       It goes from development environment (git trunk-based, commit hooks) to CI/CD (docker, canari deployment, GithubAction).
@@ -65,7 +77,7 @@ skills:
     level: master
     keywords:
       - Docker
-      - Orchestration
+      - Kubernetes
   - name: CI/CD
     level: master
     keywords:
@@ -76,14 +88,14 @@ skills:
     level: Intermediate
     keywords:
       - AWS
-      - Serverless
+      - GCP
   - name: Software development
     level: intermediate
     keywords:
       - Typescript
       - Microservices
       - Go
-      - Rust
+      - Python
   - name: Speaker
     level: beginner
     keywords:
