--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -51,7 +51,7 @@ jobs:
           files: |
             resume.en.md
             resume.fr.md
-            ./pdfs/resume.en.pdf
-            ./pdfs/resume.fr.pdf
+            pdfs/resume.en.pdf
+            pdfs/resume.fr.pdf
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
